test/errors/sql_virtual_tables_error/zs/no_fields_error.zs
package no_fields_error;

sql_table Spellfix using spellfix1
{
    // virtual table must have at least one field!
};
